n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5678  # A porta do contêiner onde o n8n está escutando
  selector:
    app: n8n
